Closed Bug 1782722 Opened 2 years ago Closed 2 years ago

WebGL override unmasked renderer/vendor prefs should not be accessed directly

Categories

(Core :: Graphics: CanvasWebGL, defect, P3)

defect

Tracking

()

RESOLVED FIXED
105 Branch
Tracking Status
firefox105 --- fixed

People

(Reporter: aosmond, Assigned: aosmond)

References

Details

Attachments

(1 file)

WebGL override unmasked renderer/vendor prefs should not be accessed directly because it isn't safe on DOM workers.

On workers we cannot access anything in the Preferences class. We should
make webgl.override-unmasked-renderer/vendor into gfxVars set at startup
so that they are threadsafe.

Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e223256a0634
Make WebGL override unmasked renderer/vendor pref accesses thread safe. r=gfx-reviewers,lsalzman,jgilbert
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: