Bug 1782722 - Make WebGL override unmasked renderer/vendor pref accesses thread safe. r=gfx-reviewers,lsalzman,jgilbert

Differential Revision: https://phabricator.services.mozilla.com/D153469